--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,85 +9,87 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sayrio.myappportofolio.MainActivity">
 
-    <TextView
-        android:id="@+id/id_title"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="21sp"
-        android:textColor="@color/colorTitle"
-        android:layout_marginBottom="40dp"
-        android:text="@string/home_title" />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button_one"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/button_one"
-        android:textSize="15sp"
-        android:textColor="@color/colorButtonText"
-        android:background="@color/colorButton"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/id_title"/>
+        <TextView
+            android:id="@+id/id_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="@dimen/text_heading"
+            android:textColor="@color/colorTitle"
+            android:layout_marginBottom="@dimen/text_heading_margin"
+            android:text="@string/home_title" />
 
-    <Button
-        android:id="@+id/button_two"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/button_two"
-        android:textSize="15sp"
-        android:textColor="@color/colorButtonText"
-        android:background="@color/colorButton"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/button_one"/>
+        <Button
+            android:id="@+id/button_one"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/button_one"
+            android:textSize="@dimen/button_text_size"
+            android:textColor="@color/colorButtonText"
+            android:background="@color/colorButton"
+            android:layout_marginBottom="@dimen/button_margin" />
 
-    <Button
-        android:id="@+id/button_three"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/button_three"
-        android:textSize="15sp"
-        android:textColor="@color/colorButtonText"
-        android:background="@color/colorButton"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/button_two"/>
+        <Button
+            android:id="@+id/button_two"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/button_two"
+            android:textSize="@dimen/button_text_size"
+            android:textColor="@color/colorButtonText"
+            android:background="@color/colorButton"
+            android:layout_marginBottom="@dimen/button_margin" />
 
-    <Button
-        android:id="@+id/button_four"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/button_four"
-        android:textSize="15sp"
-        android:textColor="@color/colorButtonText"
-        android:background="@color/colorButton"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/button_three"/>
+        <Button
+            android:id="@+id/button_three"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/button_three"
+            android:textSize="@dimen/button_text_size"
+            android:textColor="@color/colorButtonText"
+            android:background="@color/colorButton"
+            android:layout_marginBottom="@dimen/button_margin" />
 
-    <Button
-        android:id="@+id/button_five"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/button_five"
-        android:textSize="15sp"
-        android:textColor="@color/colorButtonText"
-        android:background="@color/colorButton"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/button_four"/>
+        <Button
+            android:id="@+id/button_four"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/button_four"
+            android:textSize="@dimen/button_text_size"
+            android:textColor="@color/colorButtonText"
+            android:background="@color/colorButton"
+            android:layout_marginBottom="@dimen/button_margin" />
 
-    <Button
-        android:id="@+id/button_six"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/button_six"
-        android:textSize="15sp"
-        android:textColor="@color/colorButtonText"
-        android:background="@color/colorButtonAccent"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/button_five"/>
-</RelativeLayout>
+        <Button
+            android:id="@+id/button_five"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/button_five"
+            android:textSize="@dimen/button_text_size"
+            android:textColor="@color/colorButtonText"
+            android:background="@color/colorButton"
+            android:layout_marginBottom="@dimen/button_margin" />
+
+        <Button
+            android:id="@+id/button_six"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/button_six"
+            android:textSize="@dimen/button_text_size"
+            android:textColor="@color/colorButtonText"
+            android:background="@color/colorButtonAccent"
+            android:layout_marginBottom="@dimen/button_margin" />
+
+    </LinearLayout>
+
+</ScrollView>
