--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="button_width">220dp</dimen>
+    <dimen name="button_text_size">15sp</dimen>
+    <dimen name="button_margin">10dp</dimen>
+    <dimen name="text_heading">21sp</dimen>
+    <dimen name="text_heading_margin">40dp</dimen>
 </resources>
